--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h1>We attended HacktoberFest 2k19 by ACM-VIT!!!</h1>
         <ul>
           <li>Aditya Srivastava</li>
+          <li>Pragati</li>
         </ul>
       </div>
       <div class="about-imgs">
